---

# Changes on restG4

* Geometry setups have been removed from `restG4` and `restG4-build`. `CMakeLists.txt` has been updated accordingly. Geometry files are not copied anymore to `restG4-build`.

* Now `restG4` main will import the GDML geometry `TGeoManager::Import(GDMLfile)` and append it to the ROOT file generated.

# Changes on inputData

* inputData/definitions : New directory containning common definitions : `readouts.rml`, `materials.xml`, `gases.rml`
       In order to implement materials.xml in specific configurations we just use a symbolic link.
       materials.xml symlink has been added to the different geometries in the configuration directories.

     Note : Now we must specify full path when referencing a file. 

---
Example:
  <section gas nameref="Gas name" file="{REST_PATH}/inputData/definitions/gases.rml" >
---

* inputData/distributions : Added `HighEnergyGammaBiasing.root` distribution containning the resulting gamma after biasing in a water tank (see README).


# Changes in restcore

* The geometry `TRestGeometry::TGeoManager` is not anymore contained by `TRestRun`.
    Undetermined problems were found when doing `fGeometry->Write()`, problems with `TGeoManager` serialization?

* New method `GetEventWithID(Int_t id)`: This methods gets the tree entry correspoding to the event with `fEventID==id`.
    Thus, it fills the fInputEvent structure inside `TRestRun` with the event with `id`.

* A new member `vector <Int_t> fEventIDs;` has been added to the TRestRun members. 
    This is a vector that relates directly the entries on the eventTree with its eventID. 
    It is used in `GetEventWithID(id)` for quick pick-up of the required event with a specific `id`.

And other minor fixes.

==========================================================
Date : 15th / March / 2016
Branch : rawToSignalFix
Author : Javier Galan
Merge : #56
Title : Minor fix on rawToSignal process when the number of events to process given is zero.