@@ -30,6 +30,7 @@
     <parameter name="geometryPath" value="{REST_PATH}/config/pandaXIII/geometry/{REST_GEOMETRY_TYPE}/" />
     <parameter name="gdml_file" value="{REST_GEOMETRY_SETUP}"/>
     <parameter name="maxTargetStepSize" value="{REST_MAXSTEPSIZE}" units="um" />
+    <parameter name="subEventTimeDelay" value="{REST_EVENTDELAY}" units="us" />
 
     <generator type="point" position="({REST_X},{REST_Y},{REST_Z})" units="mm" >
         <source particle="{REST_ISOTOPE}" fullChain="{REST_FULLCHAIN}">
