@@ -79,7 +79,13 @@ void TRestG4Metadata::InitFromConfigFile()
 
     fGeometryPath = GetParameter( "geometryPath" );
 
-    fMaxTargetStepSize = GetDblParameterWithUnits( "maxTargetStepSize" );
+    Double_t defaultStep = 100 * REST_Units::um;
+    fMaxTargetStepSize = GetDblParameterWithUnits( "maxTargetStepSize", defaultStep );
+
+    Double_t defaultTime = 1. / REST_Units::s;
+    fSubEventTimeDelay = GetDblParameterWithUnits( "subEventTimeDelay", defaultTime );
+
+
 
     ReadGenerator();
 
@@ -299,6 +305,7 @@ void TRestG4Metadata::PrintMetadata( )
         cout << "Geometry File : " << Get_GDML_Filename() << endl;
         cout << "Geometry Path : " << GetGeometryPath() << endl;
         cout << "Max. Step size : " << GetMaxTargetStepSize() << " mm" << endl;
+        cout << "Sub-event time delay : " << GetSubEventTimeDelay() << " us" << endl;
         cout << "---------------------------------------" << endl;
         cout << "Generator type : " << GetGeneratorType() << endl;
         cout << "Generated from : " << GetGeneratedFrom() << endl;
